@@ -1,3 +1,8 @@
+2006-12-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gstring.c (g_string_chunk_new): Don't shadow size.
+	(#386760, Kazuki IWAMOTO)
+
 2006-12-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/gstring.c: Move more documentation inline.
